[metadata]
name = fuzzaide
version = 0.0.1
author = fuzzah
author_email = fuzzah@tuta.io
url = https://github.com/fuzzah/fuzzaide

description = collection of helper tools for fuzzing
long_description = file: README.md
long_description_content_type = text/markdown

license = MIT License

classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Framework :: Pytest
    Framework :: tox
    Topic :: Security
    Topic :: Utilities

[options]
install_requires =
    importlib; python_version == "2.6"

packages = find:

[options.extras_require]
SCAPY = scapy
FLASK = Flask

[options.entry_points]
console_scripts =
    # order: ls -Al
    appverif-minimize = fuzzaide.tools.appverif_minimize:main
    argv-fuzz-cook = fuzzaide.tools.argv_fuzz_cook:main
    dupmanage = fuzzaide.tools.dupmanage:main
    fuzzman = fuzzaide.tools.fuzzman:main
    fuzz-webview = fuzzaide.tools.fuzz_webview.fuzz_webview:main [FLASK]
    pcap2raw = fuzzaide.tools.pcap2raw:main [SCAPY]
    split-dir-contents = fuzzaide.tools.split_dir_contents:main
    split-file-contents = fuzzaide.tools.split_file_contents:main

