[metadata]
name = fuzzaide
version = 0.1.0.dev
author = Valery Korolyov
author_email = fuzzah@tuta.io
url = https://github.com/fuzzah/fuzzaide

description = collection of helper tools for fuzzing
long_description = file: README.md
long_description_content_type = text/markdown

license = MIT
license_files = LICENSE

classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Framework :: Pytest
    Topic :: Security
    Topic :: Utilities

python_requires = >=3.6
packages = find:

[options]
install_requires =
    dataclasses; python_version < "3.7"

[options.extras_require]
all =
    %(test)s
    %(pcap)s
    %(webview)s

pcap =
    scapy

webview =
    Flask

test =
    pytest
    pytest-mock

dev =
    %(all)s
    black
    build
    coverage
    pylint
    rope
    wheel


[options.entry_points]
console_scripts =
    appverif-minimize = fuzzaide.tools.appverif_minimize:main
    argv-fuzz-cook = fuzzaide.tools.argv_fuzz_cook:main
    dupmanage = fuzzaide.tools.dupmanage:main
    fuzzman = fuzzaide.tools.fuzzman.fuzzman:main
    fuzz-webview = fuzzaide.tools.fuzz_webview.fuzz_webview:main [webview]
    pcap2raw = fuzzaide.tools.pcap2raw:main [pcap]
    split-dir-contents = fuzzaide.tools.split_dir_contents:main
    split-file-contents = fuzzaide.tools.split_file_contents:main
